@@ -72,6 +72,7 @@ usb:v051Dp0000*
 usb:v051Dp0002*
 usb:v051Dp0003*
 usb:v051Dp0004*
+usb:v051Dp0005*
  UPOWER_BATTERY_TYPE=ups
  UPOWER_VENDOR=APC
 
