@@ -40,6 +40,8 @@ https://github.com/networkupstools/nut/milestone/12
    to patterns defined in link:docs/nut-names.txt[]
 
  - `usbhid-ups` driver updates:
+   * Declared support for APC with USB ID `051d:0005` (details may evolve
+     as the devices become better known). [issue #3047, PR #3081]
    * Improved support for Eaton 5S1500LCD (US version). [#2380]
 
  - `configure` script options:
